--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,9 @@
 nav {
     background-color: #333;
   }
+  h1 {
+    color: rgb(32, 129, 168);
+  }
   
   ul {
     list-style-type: none;
@@ -66,5 +69,27 @@ nav {
   
   .dropdown:hover .dropbtn {
     background-color: #111;
+  }
+  .header-image {
+    width: 10%;
+    position: relative;
+    text-align: center;
+  }
+  
+  .header-image img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    
+  }
+  .intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .intro img {
+    width: 25%; /* or any other percentage value */
   }
   
