--- a/public/note.css
+++ b/public/note.css
@@ -25,3 +25,12 @@ margin-bottom: 100px;
     font-size: 20pt;
   
   }
+  .button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #fff; /* text color */
+    background-color: #333; /* button color */
+    border-radius: 4px; /* round corners */
+  }
