--- a/public/song3.css
+++ b/public/song3.css
@@ -1,15 +1,24 @@
 body {
     background-color: #333; /* Set the background color to a dark shade */
-    background-image:url( "Christmas2.jpeg")
     
     
   }
+  div {
+    display: flex;
+  }
+  
+  img {
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+  }
+  
   
   h1 {
     text-align: center; /* Center the heading text */
-    color: rgb(6, 143, 22); /* Set the text color to white */
+    color: rgb(70, 175, 224); /* Set the text color to white */
     background-color: rgb(86, 57, 57); /* Set the background color to red */
-    border: 10px solid rgb(20, 187, 37); /* Add a border */
+    border: 10px solid rgb(68, 10, 10); /* Add a border */
     display: flex; /* Make the textbox a flex container */
     justify-content: center; /* Center the textbox horizontally */
     padding: 10px;
