--- a/public/index.css
+++ b/public/index.css
@@ -47,7 +47,7 @@ nav {
     display: none;
     position: absolute;
     z-index: 1;
-    background-color: #b01818;
+    background-color: #1fc8fb;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(184, 16, 16, 0.2);
   }
